# ponscripter-fork

./: .gitignore  .travis.yml  .travis_before_install.sh  .travis_run.sh  CMakeLists.txt  README.md  configure
.github/workflows/: main.yml  steambuild.dockerfile
cmake/: FindOGG.cmake  FindVorbis.cmake  FindVorbisFile.cmake
cmake/sdl2/: FindSMPEG2.cmake
docs/: index.html  tutorial.md
docs/api/: index.html
src/: AnimationInfo.cpp  AnimationInfo.h  CMakeLists.txt  Compositor.cpp  Compositor.h  Makefile.extlibs  Makefile.ponscripter  Ponscripter.cpp  PonscripterLabel.cpp  PonscripterLabel.h  PonscripterLabel_animation.cpp  PonscripterLabel_command.cpp  PonscripterLabel_effect.cpp  PonscripterLabel_event.cpp  PonscripterLabel_image.cpp  PonscripterLabel_sound.cpp  PonscripterLabel_text.cpp  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.cpp  ScriptParser.h  ScriptParser_command.cpp  graphics_accelerated.cpp  graphics_accelerated.h  graphics_altivec.cpp  graphics_common.h  graphics_mmx.cpp  graphics_sse2.cpp  graphics_sse2.h  graphics_ssse3.cpp  graphics_ssse3.h  graphics_x86_common.h  pstring.cpp  pstring.h
src/extlib/src/steam-sdk/: CMakeLists.txt  configure
src/resources/: default.icns
